kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pokemon-api
spec:
  selector:
    app: pokemon-api
  ports:
    - port: 80
      targetPort: 8666
