kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pokemon-api
  labels:
    name: pokemon-api
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "k8s-pokemon-api"
    networking.gke.io/managed-certificates: "pokemon-api"
    networking.gke.io/v1beta1.FrontendConfig: "frontend-config"
spec:
  rules:
    - host: pokemon.arcofz.dev
      http:
        paths:
          - path: /api/*
            backend:
              service:
                name: pokemon-api
                port:
                  number: 80
